--- a/app/components/signatures/signatures-add-minister.hbs
+++ b/app/components/signatures/signatures-add-minister.hbs
@@ -8,9 +8,6 @@
           @checked={{true}}
         />
         <Auk::Checkbox
-          @label="Jan Jambon"
-        />
-        <Auk::Checkbox
           @label="Hilde Crevits"
         />
         <Auk::Checkbox
@@ -36,7 +33,7 @@
           @label="Benjamin Dalle"
         />
         <Auk::Checkbox
-          @label="Jeroen van Overmere"
+          @label="Jeroen Overmere"
         />
       </Auk::CheckboxList>
     </div>
