--- a/app/components/search/result-cards/case.hbs
+++ b/app/components/search/result-cards/case.hbs
@@ -2,12 +2,8 @@
   <card.header>
     <div class="au-u-flex">
       <p class="au-u-para-small au-u-muted au-u-medium">
-        {{#if @sessionDate}}
-          {{t "on-agenda-of"}}
-          {{date @sessionDate}}
-        {{else}}
-          {{t "not-yet-on-agenda"}}
-        {{/if}}
+        {{t "case-created"}}
+        {{date @created}}
       </p>
       {{#if (eq @isArchived "true")}}
         <AuPill @size="small" @skin="border">{{t "deleted-case"}}</AuPill>
@@ -28,12 +24,23 @@
     </AuHeading>
   </card.header>
   <card.content>
-    {{! <p class="au-u-para-small au-u-margin-top-small au-u-muted">
-      Gevonden in
-      <AuLink @skin="secondary">
-        Agendapunt ...
-      </AuLink>
-      en nog 4 andere plaatsen
-    </p> }}
+    {{#if @subcaseHighlights}}
+      <p class="au-u-para-small au-u-margin-top-small au-u-muted">
+        {{t "found-inside"}}
+        <span class="au-u-muted au-u-medium">
+          <SanitizeHtml
+            @raw={{true}}
+            @value={{object-at 0 @subcaseHighlights}}
+            @options={{this.sanitizeHtmlOptions}}
+          />
+        </span>
+        {{#if (eq @subcaseHighlights.length 2)}}
+          {{t "and-one-other-subcase"}}
+        {{/if}}
+        {{#if (gt @subcaseHighlights.length 2)}}
+          {{t "and-n-other-subcases" n=(sub @subcaseHighlights.length 1)}}
+        {{/if}}
+      </p>
+    {{/if}}
   </card.content>
 </AuCard>
