--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -158,7 +158,7 @@
         <Auk::Panel::Body class="auk-u-p-0">
           <Auk::List @bordered={{true}}>
             <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-              <span>medewerker@vlaanderen.be</span>
+              <span>kc@vlaanderen.be</span>
               <Auk::Button
                 @skin="danger-borderless"
                 @layout="icon-only"
@@ -192,7 +192,7 @@
         <Auk::Panel::Body class="auk-u-p-0">
           <Auk::List @bordered={{true}}>
             <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-              <span>medewerker@vlaanderen.be</span>
+              <span>kc@vlaanderen.be</span>
               <Auk::Button
                 @skin="danger-borderless"
                 @layout="icon-only"
