--- a/app/templates/signatures/email.hbs
+++ b/app/templates/signatures/email.hbs
@@ -271,7 +271,7 @@
           <Auk::Panel::Body class="auk-u-p-0">
             <Auk::List @bordered={{true}}>
               <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-                <span>medewerker@vlaanderen.be</span>
+                <span>kc@vlaanderen.be</span>
                 <Auk::Button
                   @skin="danger-borderless"
                   @layout="icon-only"
@@ -305,7 +305,7 @@
           <Auk::Panel::Body class="auk-u-p-0">
             <Auk::List @bordered={{true}}>
               <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-                <span>medewerker@vlaanderen.be</span>
+                <span>kc@vlaanderen.be</span>
                 <Auk::Button
                   @skin="danger-borderless"
                   @layout="icon-only"
