--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -423,7 +423,7 @@
             <Auk::Panel::Body class="auk-u-p-0">
               <Auk::List @bordered={{true}}>
                 <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-                  <span>medewerker@vlaanderen.be</span>
+                  <span>kc@vlaanderen.be</span>
                   <Auk::Button
                     @skin="danger-borderless"
                     @layout="icon-only"
@@ -457,7 +457,7 @@
             <Auk::Panel::Body class="auk-u-p-0">
               <Auk::List @bordered={{true}}>
                 <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-                  <span>medewerker@vlaanderen.be</span>
+                  <span>kc@vlaanderen.be</span>
                   <Auk::Button
                     @skin="danger-borderless"
                     @layout="icon-only"
