--- a/app/templates/signatures/start.hbs
+++ b/app/templates/signatures/start.hbs
@@ -440,7 +440,7 @@
             <Auk::Panel::Body class="auk-u-p-0">
               <Auk::List @bordered={{true}}>
                 <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-                  <span>medewerker@vlaanderen.be</span>
+                  <span>kc@vlaanderen.be</span>
                   <Auk::Button
                     @skin="danger-borderless"
                     @layout="icon-only"
@@ -474,7 +474,7 @@
             {{!-- <Auk::Panel::Body class="auk-u-p-0">
               <Auk::List @bordered={{true}}>
                 <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
-                  <span>medewerker@vlaanderen.be</span>
+                  <span>kc@vlaanderen.be</span>
                   <Auk::Button
                     @skin="danger-borderless"
                     @layout="icon-only"
