--- a/app/templates/signatures/busy.hbs
+++ b/app/templates/signatures/busy.hbs
@@ -16,7 +16,7 @@
       {{else}}
       <Auk::Toolbar::Item>
         <Auk::Tabs>
-          <Auk::Tab @route="signatures.index">
+          <Auk::Tab @route="signatures.busy">
             Gemarkeerd voor handtekenen
           </Auk::Tab>
           <Auk::Tab @route="signatures.start">
