--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -52,7 +52,7 @@
               </div>
             {{/unless}}
             {{! template-lint-enable simple-unless }}
-            {{#each agendaitemGroup.agendaitems as |agendaitem|}}
+            {{#each agendaitemGroup.agendaitems as |agendaitem indexItems|}}
               <li
                 class="vlc-agenda-items__sub-item"
                 {{sortable-item
@@ -70,6 +70,9 @@
                   @showFormallyOkStatus={{@currentAgenda.status.isDesignAgenda}}
                   @isEditingFormallyOkStatus={{@isEditingOverview}}
                   @showDragHandle={{this.canDragAgendaitems}}
+                  @onMove={{perform this.move}}
+                  @isFirst={{and (eq index 0) (eq indexItems 0)}}
+                  @isLast={{and (not (has-next agendaitemGroup @notaGroups)) (not (has-next agendaitem agendaitemGroup.agendaitems ))}}
                 />
               </li>
             {{/each}}
@@ -97,7 +100,7 @@
   <div class="auk-u-mb-4">
     {{#if @announcements.length}}
       <ul {{sortable-group onChange=@onReorderAgendaitems}}>
-        {{#each @announcements as |announcement|}}
+        {{#each @announcements as |announcement indexitems|}}
           <li
             class="vlc-agenda-items__sub-item"
             {{sortable-item
@@ -115,6 +118,9 @@
               @showFormallyOkStatus={{@currentAgenda.status.isDesignAgenda}}
               @isEditingFormallyOkStatus={{@isEditingOverview}}
               @showDragHandle={{this.canDragAgendaitems}}
+              @onMove={{perform this.move}}
+              @isFirst={{eq indexitems 0}}
+              @isLast={{not (has-next announcement @announcements)}}
             />
           </li>
         {{/each}}
