--- a/app/templates/search/agendaitems.hbs
+++ b/app/templates/search/agendaitems.hbs
@@ -70,6 +70,7 @@
             @agendaItemId={{row.id}}
             @shortTitle={{row.shortTitle}}
             @title={{row.title}}
+            @pastAgendaVersions={{row.pastAgendaVersions}}
           />
         </td>
       </:body>
