--- a/app/components/search/result-cards/document.hbs
+++ b/app/components/search/result-cards/document.hbs
@@ -1,9 +1,4 @@
-<AuCard
-  @shadow={{true}}
-  @size="small"
-  class="result-card"
-  as |c|
->
+<AuCard @shadow={{true}} @size="small" class="result-card" as |c|>
   <c.header>
     <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-tiny">
       <p class="au-u-para-small au-u-muted au-u-medium">
@@ -21,10 +16,22 @@
     </AuHeading>
   </c.header>
   <c.content>
-    {{!-- <p class="au-u-para">Tekst ...... <strong>test</strong> ....... tekst</p> --}}
+    {{#if @contentHighlight}}
+      <p>
+        <span class="au-u-para-small au-u-muted">
+          {{t "found-in-thing" thing=(lowercase (t "content"))}}:
+        </span>
+        <div class="au-u-para">
+          <SanitizeHtml
+            @raw={{true}}
+            @value={{object-at 0 @contentHighlight}}
+          />
+        </div>
+      </p>
+    {{/if}}
     {{#if (and @agendaitemShortTitle @meetingId @agendaId @agendaitemId)}}
       <p class="au-u-para-small au-u-muted">
-        {{t "found-in-thing" thing=(t "agendaitem")}}
+        {{t "uploaded-in-thing" thing=(t "agendaitem")}}
         <AuLink
           @route="agenda.agendaitems.agendaitem"
           @models={{array @meetingId @agendaId @agendaitemId}}
