--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -176,6 +176,20 @@ $au-button-height: 3.4rem;
   > * + h6 {
     margin-top: 1.5rem;
   }
+
+  em { // default text color in Kaleidos
+    color: $auk-color-text;
+  }
+
+  sub {
+    vertical-align: sub;
+    font-size: smaller;
+  }
+
+  sup {
+    vertical-align: super;
+    font-size: smaller;
+  }
 }
 
 .au-c-button {
