fix: update search header for documents and news items
We erroneously showed "Dossiers" and "Agendas" respectively.

--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -18,7 +18,7 @@
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
       @searchText={{this.searchText}}
-      @searchType={{t "cases"}}
+      @searchType={{t "documents"}}
       @onSortChange={{this.selectSort}}
       @sortOptions={{this.sortOptions}}
       @sort={{this.sort}}
