--- a/app/templates/search/news-items.hbs
+++ b/app/templates/search/news-items.hbs
@@ -6,7 +6,7 @@
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
       @searchText={{this.searchText}}
-      @searchType={{t "agenda"}}
+      @searchType={{t "news-items"}}
       @onSortChange={{this.selectSort}}
       @sortOptions={{this.sortOptions}}
       @sort={{this.sort}}
