--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -4,6 +4,11 @@
   </AuHeading>
   <ul class="au-c-list-navigation">
     <li class="au-c-list-navigation__item">
+      <AuNavigationLink @route="search.all-types">
+        {{t "all-content"}}
+      </AuNavigationLink>
+    </li>
+    <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.cases">
         {{t "agendaitem-case"}}
       </AuNavigationLink>
